--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -41,7 +41,7 @@
                            autocomplete="off"/>
                 </div>
                 <div class="col-lg-2 col-sm-6 mb-2">
-                    <select name="extralines" class="form-control">
+                    <select name="extralines" class="form-select">
                         <option value="true">{{ i18n.trans('add-extra-lines') }}</option>
                         <option value="false">{{ i18n.trans('no-extra-lines') }}</option>
                     </select>
