--- a/Core/View/Tab/PreviewFiles.html.twig
+++ b/Core/View/Tab/PreviewFiles.html.twig
@@ -103,7 +103,7 @@
 </div>
 
 {% macro inputTextArea(text, i18n) %}
-    <div class="form-group">
+    <div class="mb-3">
         <textarea name="observations" class="form-control col-12" rows="4" placeholder="{{ i18n.trans('observations') }}">{{ text }}</textarea>
     </div>
 {% endmacro %}
