--- a/Core/View/CopyAsiento.html.twig
+++ b/Core/View/CopyAsiento.html.twig
@@ -19,8 +19,8 @@
                                 {% if fsc.empresa.count() > 1 %}
                                     <div class="col-sm-2">
                                         {{ trans('company') }}
-                                        <div class="form-group">
-                                            <select name="idempresa" class="form-control" required>
+                                        <div class="mb-3">
+                                            <select name="idempresa" class="form-select" required>
                                                 {% for item in fsc.codeModel.all('empresas','idempresa','nombrecorto',false) %}
                                                     {% set selected = item.code == fsc.model.idempresa ? ' selected' : '' %}
                                                     <option value="{{ item.code }}"{{ selected }}>{{ item.description }}</option>
@@ -31,22 +31,22 @@
                                 {% endif %}
                                 <div class="col-sm-2">
                                     {{ trans('date') }}
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <input type="date" name="fecha" value="{{ "now" | date('Y-m-d') }}"
                                                class="form-control" required/>
                                     </div>
                                 </div>
                                 <div class="col-sm">
                                     {{ trans('concept') }}
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <input type="text" name="concepto" value="{{ fsc.model.concepto }}"
                                                class="form-control" required/>
                                     </div>
                                 </div>
                                 <div class="col-sm-2">
                                     {{ trans('daily') }}
-                                    <div class="form-group">
-                                        <select name="iddiario" class="form-control">
+                                    <div class="mb-3">
+                                        <select name="iddiario" class="form-select">
                                             {% for item in fsc.codeModel.all('diarios','iddiario','descripcion') %}
                                                 {% if item.code == fsc.model.iddiario %}
                                                     <option value="{{ item.code }}" selected>
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="col-sm-2">
                                     {{ trans('channel') }}
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <input type="number" name="canal" value="{{ fsc.model.canal }}"
                                                class="form-control"/>
                                     </div>
