--- a/Core/View/CopyModel.html.twig
+++ b/Core/View/CopyModel.html.twig
@@ -18,13 +18,11 @@
                             <div class="row">
                                 {% if fsc.model.codcliente %}
                                     <div class="col-sm">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <div class="input-group">
-                                                <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <i class="fas fa-search"></i>
                                                 </span>
-                                                </div>
                                                 <input type="hidden" id="codclienteAutocomplete" name="codcliente"
                                                        value="{{ fsc.model.codcliente }}"/>
                                                 <input type="text" id="codcliente"
@@ -38,13 +36,11 @@
                                     </div>
                                 {% elseif fsc.model.codproveedor %}
                                     <div class="col-sm">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <div class="input-group">
-                                                <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <i class="fas fa-search"></i>
                                                 </span>
-                                                </div>
                                                 <input type="hidden" id="codproveedorAutocomplete" name="codproveedor"
                                                        value="{{ fsc.model.codproveedor }}"/>
                                                 <input type="text" id="codproveedor"
@@ -58,26 +54,24 @@
                                     </div>
                                 {% endif %}
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <input type="date" name="fecha" value="{{ "now" | date('Y-m-d') }}"
                                                class="form-control" required=""/>
                                     </div>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <input type="time" name="hora" value="{{ "now" | date('H:i:s') }}"
                                                class="form-control" required=""/>
                                     </div>
                                 </div>
                                 {% if fsc.model.codcliente %}
                                     <div class="col-sm">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <div class="input-group">
-                                                <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <i class="fas fa-hashtag"></i>
                                                 </span>
-                                                </div>
                                                 <input type="text" name="numero2" class="form-control"
                                                        placeholder="{{ trans('number2') }}"/>
                                             </div>
@@ -85,13 +79,11 @@
                                     </div>
                                 {% elseif fsc.model.codproveedor %}
                                     <div class="col-sm">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <div class="input-group">
-                                                <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <i class="fas fa-hashtag"></i>
                                                 </span>
-                                                </div>
                                                 <input type="text" name="numproveedor" class="form-control"
                                                        placeholder="{{ trans('numsupplier') }}"/>
                                             </div>
@@ -135,9 +127,9 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         {{ trans('warehouse') }}
-                                        <select name="codalmacen" class="form-control" required="">
+                                        <select name="codalmacen" class="form-select" required="">
                                             {% for item in fsc.codeModel.all('almacenes', 'codalmacen', 'nombre', false) %}
                                                 {% if item.code == fsc.model.codalmacen %}
                                                     <option value="{{ item.code }}" selected="">
@@ -153,9 +145,9 @@
                                     </div>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         {{ trans('serie') }}
-                                        <select name="codserie" class="form-control" required="">
+                                        <select name="codserie" class="form-select" required="">
                                             {% for item in fsc.codeModel.all('series', 'codserie', 'descripcion', false) %}
                                                 {% if item.code == fsc.model.codserie %}
                                                     <option value="{{ item.code }}" selected="">
@@ -171,9 +163,9 @@
                                     </div>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         {{ trans('payment-method') }}
-                                        <select name="codpago" class="form-control" required="">
+                                        <select name="codpago" class="form-select" required="">
                                             {% for item in fsc.codeModel.all('formaspago', 'codpago', 'descripcion', false) %}
                                                 {% if item.code == fsc.model.codpago %}
                                                     <option value="{{ item.code }}" selected="">
@@ -189,28 +181,24 @@
                                     </div>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         {{ trans('global-dto') }}
                                         <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text">
-                                                    <i class="fas fa-percentage"></i>
-                                                </span>
-                                            </div>
+                                            <span class="input-group-text">
+                                                <i class="fas fa-percentage"></i>
+                                            </span>
                                             <input type="number" max="100" min="0" step="any" name="dtopor1"
                                                    class="form-control" value="{{ fsc.model.dtopor1 }}"/>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         {{ trans('global-dto-2') }}
                                         <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text">
-                                                    <i class="fas fa-percentage"></i>
-                                                </span>
-                                            </div>
+                                            <span class="input-group-text">
+                                                <i class="fas fa-percentage"></i>
+                                            </span>
                                             <input type="number" max="100" min="0" step="any" name="dtopor2"
                                                    class="form-control" value="{{ fsc.model.dtopor2 }}"/>
                                         </div>
