--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -99,15 +99,13 @@
                             <div role="tabpanel" class="tab-pane active" id="preferencias">
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('language') }}:
                                             <div class="input-group">
-                                                <span class="input-group-prepend">
-                                                    <span class="input-group-text">
-                                                        <i class="fas fa-language"></i>
-                                                    </span>
+                                                <span class="input-group-text">
+                                                    <i class="fas fa-language"></i>
                                                 </span>
-                                                <select id="fs_lang" name="fs_lang" class="form-control">
+                                                <select id="fs_lang" name="fs_lang" class="form-select">
                                                     {% for langCode, langName in i18n.getAvailableLanguages() %}
                                                         {% if langCode == i18n.getLang() %}
                                                             <option value="{{ langCode }}"
@@ -121,15 +119,13 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('timezone') }}:
                                             <div class="input-group">
-                                                <span class="input-group-prepend">
-                                                    <span class="input-group-text">
-                                                        <i class="far fa-clock"></i>
-                                                    </span>
+                                                <span class="input-group-text">
+                                                    <i class="far fa-clock"></i>
                                                 </span>
-                                                <select name="fs_timezone" class="form-control">
+                                                <select name="fs_timezone" class="form-select">
                                                     {% for tz in timezones %}
                                                         <option value="{{ tz }}">{{ tz }}</option>
                                                     {% endfor %}
@@ -138,36 +134,34 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-type') }}:
-                                            <select id="db_type" name="fs_db_type" class="form-control">
+                                            <select id="db_type" name="fs_db_type" class="form-select">
                                                 <option value="mysql">MySQL</option>
                                                 <option value="postgresql">PostgreSQL</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-host') }}:
                                             <input type="text" name="fs_db_host" value="localhost" class="form-control"
                                                    required=""/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-port') }}:
                                             <input type="number" id="db_port" name="fs_db_port" value="3306"
                                                    class="form-control" required=""/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-name') }}:
                                             <div class="input-group">
-                                                <span class="input-group-prepend">
-                                                    <span class="input-group-text">
-                                                        <i class="fas fa-database"></i>
-                                                    </span>
+                                                <span class="input-group-text">
+                                                    <i class="fas fa-database"></i>
                                                 </span>
                                                 <input type="text" name="fs_db_name" value="facturascripts"
                                                        class="form-control" required=""/>
@@ -175,27 +169,25 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-user') }}:
                                             <input type="text" id="db_user" name="fs_db_user" value="root"
                                                    class="form-control" required=""/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-password') }}:
                                             <div class="input-group">
-                                                <span class="input-group-prepend">
-                                                    <span class="input-group-text">
-                                                        <i class="fas fa-key"></i>
-                                                    </span>
+                                                <span class="input-group-text">
+                                                    <i class="fas fa-key"></i>
                                                 </span>
                                                 <input type="password" name="fs_db_pass" class="form-control"/>
                                             </div>
                                         </div>
                                     </div>
                                     <div id="mysql_socket_div" class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('mysql-socket') }}:
                                             <input type="text" name="mysql_socket" class="form-control"
                                                    placeholder="{{ trans('optional') }}"/>
@@ -207,7 +199,7 @@
                             <div role="tabpanel" class="tab-pane" id="licencia">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <pre>{{ license }}</pre>
                                         </div>
                                     </div>
