--- a/Core/View/MegaSearch.html.twig
+++ b/Core/View/MegaSearch.html.twig
@@ -32,7 +32,7 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 <form action="{{ fsc.url() }}" method="post" class="form">
-                    <div class="form-group">
+                    <div class="mb-3">
                         <div class="input-group">
                             <input type="text" name="query" value="{{ fsc.query }}" class="form-control form-control-lg"
                                    autocomplete="off" autofocus=""/>
