--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -12,7 +12,7 @@
                     {{ formToken() }}
                     <div class="card shadow mb-3">
                         <div class="card-body">
-                            <div class="form-group">
+                            <div class="mb-3">
                                 <textarea name="observations" class="form-control"
                                           placeholder="{{ trans('observations') }}">{{ docfile.observations | raw }}</textarea>
                             </div>
@@ -73,7 +73,7 @@
                             <h5 class="card-title">
                                 <i class="far fa-file"></i> {{ trans('new') }}
                             </h5>
-                            <div class="form-group">
+                            <div class="mb-3">
                                 <textarea name="observations" class="form-control"
                                           placeholder="{{ trans('observations') }}"></textarea>
                             </div>
