--- a/Core/View/Tab/AttachedFilePreview.html.twig
+++ b/Core/View/Tab/AttachedFilePreview.html.twig
@@ -3,21 +3,31 @@
 
 <div class="card shadow mb-3">
     <div class="card-body">
-        <a class="btn btn-outline-primary" href="{{ asset(file.url('download')) }}">
-            <i class="fas fa-cloud-download-alt"></i> {{ i18n.trans('download') }}
-        </a>
+        <div class="dropdown">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-cloud-download-alt"></i> {{ i18n.trans('download') }}
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download')) }}">
+                    {{ trans('valid-for-day') }}
+                </a>
+                <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download-permanent')) }}">
+                    {{ trans('unlimited') }}
+                </a>
+            </div>
+        </div>
     </div>
     {% if file.mimetype in ['image/gif','image/jpeg','image/png'] %}
         <img src="{{ asset(file.url('download')) }}" class="card-img-top" alt="{{ file.filename }}" />
     {% elseif file.getExtension() == 'mp4' %}
         <div class="embed-responsive embed-responsive-16by9">
             <video width="320" height="240" controls>
-                <source src="{{ asset(file.url('download')) }}" type="video/mp4" />
+                <source src="{{ asset(file.url('download-permanent')) }}" type="video/mp4" />
             </video>
         </div>
     {% elseif file.getExtension() == 'pdf' %}
         <div class="embed-responsive embed-responsive-16by9">
-            <embed src="{{ asset(file.url('download')) }}" type="application/pdf" />
+            <embed src="{{ asset(file.url('download-permanent')) }}" type="application/pdf" />
         </div>
     {% endif %}
 </div>
