Rediseñado todo el index y el proceso de inicio para usar el nuevo kernel y abandonar el código antiguo de app.

--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -5,9 +5,11 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-6">
-                <form action="{{ asset('') }}" method="post" class="form">
+                <form action="{{ asset('login') }}" method="post" class="form">
+                    {{ formToken() }}
+                    <input type="hidden" name="action" value="login">
                     <div class="card mt-4">
-                        <a href="{{ asset('') }}">
+                        <a href="{{ asset('login') }}">
                             {% set idfile = appSettings.get('default','idloginimage', 0) %}
                             {{ _self.loadLogo(idfile) }}
                         </a>
@@ -67,7 +69,9 @@
             </div>
         </div>
     </div>
-    <form action="{{ asset('') }}" method="post" class="form">
+    <form action="{{ asset('login') }}" method="post" class="form">
+        {{ formToken() }}
+        <input type="hidden" name="action" value="change-password">
         <div class="modal fade" id="newPasswordModal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
